--- a/fragments/livestreaming.html
+++ b/fragments/livestreaming.html
@@ -1,26 +1,4 @@
-<!-- <link rel="stylesheet" href="styles/livestreaming.css">
-
-<h2>📺 Live Streaming</h2>
-
-<div id="recyclerView"></div>
-
-<script type="module">
-  import { getLiveStreams } from "api/livestreamingApi.js";
-  import { LiveStreamingAdapter } from "adapters/livestreamingAdapter.js";
-
-  const recyclerView = document.getElementById("recyclerView");
-
-  async function loadData() {
-    recyclerView.innerHTML = "Loading...";
-    const data = await getLiveStreams();
-    recyclerView.innerHTML = LiveStreamingAdapter(data);
-  }
-
-  loadData();
-</script>
- -->
-
-<link rel="stylesheet" href="../styles/livestreaming.css">
+<link rel="stylesheet" href="styles/livestreaming.css">
 
 <h2>📺 Live Streaming</h2>
 <div id="recyclerView"></div>
