--- a/fragments/home.html
+++ b/fragments/home.html
@@ -1,15 +1,9 @@
+<link rel="stylesheet" href="styles/articles.css">
 <h2>🏠 Home</h2>
 
 <div style="margin-top:12px">
   <h4>Top Stories</h4>
-  <ul>
-    <li>India beats Australia in last over thriller</li>
-    <li>Virat Kohli scores century in T20</li>
-    <li>IPL 2025 schedule announced</li>
-  </ul>
-</div>
 
-<div style="margin-top:16px">
-  <h4>Highlights</h4>
-  <p>Watch match highlights, interviews and analysis.</p>
+  <!-- RecyclerView -->
+  <div id="recyclerView"></div>
 </div>
