--- a/fragments/home.html
+++ b/fragments/home.html
@@ -1,9 +1,14 @@
 <link rel="stylesheet" href="styles/articles.css">
 <h2>🏠 Home</h2>
 
+<!-- Top News Slider (ViewPager2-style) -->
 <div style="margin-top:12px">
-  <h4>Top Stories</h4>
+  <h4>Top News</h4>
+  <div id="newsSlider" class="news-slider">Loading news...</div>
+</div>
 
-  <!-- RecyclerView -->
+<!-- Articles List -->
+<div style="margin-top:16px">
+  <h4>Top Stories</h4>
   <div id="recyclerView"></div>
 </div>
